# Spotify-TUI-cpp

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  spotify_tui.cpp
include/: spotify_auth.h  spotify_operations.h  utils.h
include/base64/: base64.h
include/spotify_operations/: LibraryOperations.h  PlaybackOperations.h  PlaylistOperations.h  RecommendationsOperations.h  SearchOperations.h
src/: base64.cpp  main.cpp  spotify_auth.cpp  spotify_operations.cpp  utils.cpp
src/spotify_operations/: LibraryOperations.cpp  PlaybackOperations.cpp  PlaylistOperations.cpp  RecommendationsOperations.cpp  SearchOperations.cpp
